# react-flask-template

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: github-actions.yml
frontend/: .eslintrc.js  jest.config.js  package.json  tsconfig.json  webpack.config.js  webpack.dev.js  webpack.prod.js  webpack.proxy.js
frontend/src/: App.tsx  global.d.ts  index.html  index.tsx
frontend/src/App/: App.scss  App.test.jsx  App.tsx
src/: app.py  dev_server.py  pyproject.toml  requirements.txt
