[tool.poetry]
name = "title2image"
version = "0.1.0"
description = "A simple web app for adding the title of a reddit post to the post's image."
authors = ["Kieran Dominy <38659105+MrKren@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.3"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "*"
isort = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
